@@ -230,6 +230,7 @@ public enum ConfigNodes {
                     "# The format below will specify the changes made to the player name when chatting.",
                     "# These keys can be used in other plugins that modify the chat format like iChat.",
                     "",
+                    "# {worldname} - Displays the world the player is currently in.",
                     "# {town} - Displays town name if a member of a town.",
                     "# {townformatted} - Displays town name (if a member of a town) using tag_format.town.",
                     "# {towntag} - Displays the formated town tag (if a member of a town) using modify_chat.tag_format.town.",
@@ -269,11 +270,12 @@ public enum ConfigNodes {
             		"# This is used for when you don't have another plugin to format chat.",
             		"# It will cause Towny to overwrite any other plugins alterations to the format."),
             FILTERS_MODIFY_CHAT_FORMAT("filters_colour_chat.modify_chat.chat_format",
-            		"{townytagoverride}{townycolor}{permprefix}{group} {townyprefix}{modplayername}{townypostfix}{permsuffix}&f: {msg}",
+            		"{worldname}{townytagoverride}{townycolor}{permprefix}{group} {townyprefix}{modplayername}{townypostfix}{permsuffix}&f: {msg}",
             		"# This is the format for when you are not using another plugin to set the format and modify_chat.format is true.",
             		"# You can use text colouring shown in filters.colour as well."),
             		
             FILTERS_MODIFY_CHAT_TAG_FORMAT("filters_colour_chat.modify_chat.tag_format", "", ""),
+            FILTERS_MODIFY_CHAT_TAG_FORMAT_WORLD("filters_colour_chat.modify_chat.tag_format.world", "&f[&f%s&f] "),
             FILTERS_MODIFY_CHAT_TAG_FORMAT_TOWN("filters_colour_chat.modify_chat.tag_format.town", "&f[&3%s&f] "),
             FILTERS_MODIFY_CHAT_TAG_FORMAT_NATION("filters_colour_chat.modify_chat.tag_format.nation", "&f[&e%s&f] "),
             FILTERS_MODIFY_CHAT_TAG_FORMAT_TOWN_NATION("filters_colour_chat.modify_chat.tag_format.both", "&f[&6%s&f|&3%s&f] ",
